--- a/src/main/resources/ItemsTableView.fxml
+++ b/src/main/resources/ItemsTableView.fxml
@@ -4,27 +4,23 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.dbproject.controllers.ItemsTableController">
-   <children>
-      <VBox prefHeight="400.0" prefWidth="755.0">
-         <TableView fx:id="tblItems" prefHeight="353.0" prefWidth="755.0">
-            <columns>
-            </columns>
-         </TableView>
+<AnchorPane minWidth="8.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.dbproject.controllers.ItemsTableController">
+   <VBox prefHeight="400.0" prefWidth="755.0">
+      <TableView fx:id="tblItems">
+         <columns>
+         </columns>
+      </TableView>
 
-         <HBox spacing="100.0">
-            <children>
-               <Button fx:id="btn1" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-               <Button fx:id="btn2" layoutX="30.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-               <Button fx:id="btn3" layoutX="246.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-            </children>
-            <VBox.margin>
-               <Insets />
-            </VBox.margin>
-            <padding>
-               <Insets left="20.0" right="20.0" />
-            </padding>
-         </HBox>
-      </VBox>
-   </children>
+      <HBox spacing="100.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <Button fx:id="btn1" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="New Item" />
+         <Button fx:id="btn2" layoutX="30.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Delete Selected Item" />
+         <Button fx:id="btn3" layoutX="246.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Edit Selected Item" />
+      </HBox>
+   </VBox>
 </AnchorPane>
