--- a/src/main/resources/ItemInputDialog.fxml
+++ b/src/main/resources/ItemInputDialog.fxml
@@ -12,32 +12,20 @@
         <Label text="Type:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <TextField fx:id="typeTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label text="Price:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Genre:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <ComboBox fx:id="genreComboBox" prefWidth="150" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
-        <Label text="Description:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <TextField fx:id="descriptionTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label text="Price:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-        <Label text="Series:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <TextField fx:id="seriesTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label text="Description:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <TextField fx:id="descriptionTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-        <Label text="Release Date:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-        <TextField fx:id="releaseDateTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <columnConstraints>
-         <ColumnConstraints />
-         <ColumnConstraints />
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-      </rowConstraints>
-      <VBox.margin>
-         <Insets />
-      </VBox.margin>
+        <Label text="Series:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <TextField fx:id="seriesTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
+        <Label text="Release Date:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+        <TextField fx:id="releaseDateTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
     </GridPane>
 
     <HBox alignment="CENTER" spacing="10">
@@ -50,6 +38,7 @@
          <Insets bottom="10.0" />
       </VBox.margin>
     </HBox>
+
    <padding>
       <Insets left="10.0" right="10.0" top="5.0" />
    </padding>
