--- a/src/main/resources/ItemInputDialog.fxml
+++ b/src/main/resources/ItemInputDialog.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea">
+<VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane vgap="5">
         <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
         <Label text="Type:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="typeTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <ComboBox fx:id="typeComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
         <Label text="Genre:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <ComboBox fx:id="genreComboBox" prefWidth="150" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+        <ComboBox fx:id="genreComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
         <Label text="Price:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
         <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -22,21 +22,33 @@
         <TextField fx:id="descriptionTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
         <Label text="Series:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-        <TextField fx:id="seriesTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <ComboBox fx:id="seriesComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
         <Label text="Release Date:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-        <TextField fx:id="releaseDateTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+        <DatePicker fx:id="releaseDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
     </GridPane>
 
     <HBox alignment="CENTER" spacing="10">
-        <Button fx:id="okButton" prefHeight="26.0" prefWidth="89.0" text="OK">
-         <HBox.margin>
-            <Insets />
-         </HBox.margin></Button>
+        <Button fx:id="okButton" prefHeight="26.0" prefWidth="89.0" text="OK" />
         <Button fx:id="cancelButton" prefHeight="26.0" prefWidth="100.0" text="Cancel" />
+
       <VBox.margin>
          <Insets bottom="10.0" />
       </VBox.margin>
+
     </HBox>
 
    <padding>
