--- a/src/main/resources/ItemInputDialog.fxml
+++ b/src/main/resources/ItemInputDialog.fxml
@@ -9,37 +9,35 @@
         <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-        <Label text="Type:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <ComboBox fx:id="typeComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label text="Price:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label text="Genre:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <ComboBox fx:id="genreComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Description:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <TextField fx:id="descriptionTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label text="Price:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label text="Type" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <ComboBox fx:id="typeComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-        <Label text="Description:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <TextField fx:id="descriptionTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label text="Platform:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <ComboBox fx:id="platformComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-        <Label text="Series:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-        <ComboBox fx:id="seriesComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <Label text="Publisher:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <ComboBox fx:id="publisherComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-        <Label text="Release Date:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-        <DatePicker fx:id="releaseDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <columnConstraints>
-         <ColumnConstraints />
-         <ColumnConstraints />
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-      </rowConstraints>
+        <Label text="Series:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+        <TextField fx:id="seriesTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+
+        <Label text="Genre:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+        <ComboBox fx:id="genreComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+
+        <Label text="Release Date:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+        <DatePicker fx:id="releaseDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+
+        <Label text="Location:" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+        <ComboBox fx:id="locationComboBox" prefWidth="175" GridPane.columnIndex="1" GridPane.rowIndex="9" />
     </GridPane>
+
+
 
     <HBox alignment="CENTER" spacing="10">
         <Button fx:id="okButton" prefHeight="26.0" prefWidth="89.0" text="OK" />
