Update models and views

--- a/src/main/resources/EditDataBaseModelDialog.fxml
+++ b/src/main/resources/EditDataBaseModelDialog.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" spacing="10" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane fx:id="grid" vgap="5"/>
 
     <HBox alignment="CENTER" spacing="10">
