--- a/src/main/resources/DataBaseModelTableView.fxml
+++ b/src/main/resources/DataBaseModelTableView.fxml
@@ -11,7 +11,7 @@
          </columns>
       </TableView>
 
-      <HBox spacing="100.0">
+      <HBox alignment="CENTER" spacing="100.0">
          <VBox.margin>
             <Insets />
          </VBox.margin>
