--- a/src/main/resources/EditDataBaseModelDialog.fxml
+++ b/src/main/resources/EditDataBaseModelDialog.fxml
@@ -4,19 +4,34 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="TOP_CENTER" spacing="10" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane fx:id="grid" vgap="5"/>
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+          <GridPane fx:id="grid" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="5" VBox.vgrow="ALWAYS">
+            <padding>
+               <Insets top="5.0" />
+            </padding>
+            <columnConstraints>
+               <ColumnConstraints hgrow="NEVER" />
+               <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints halignment="RIGHT" hgrow="NEVER" minWidth="-Infinity" />
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints />
+            </rowConstraints></GridPane>
 
-    <HBox alignment="CENTER" spacing="10">
-        <Button fx:id="okBtn" prefHeight="26.0" prefWidth="89.0" text="OK" />
-        <Button fx:id="cancelBtn" prefHeight="26.0" prefWidth="100.0" text="Cancel" />
+          <HBox alignment="BOTTOM_CENTER" spacing="10" VBox.vgrow="NEVER">
+              <Button fx:id="okBtn" prefHeight="26.0" prefWidth="89.0" text="OK" />
+              <Button fx:id="cancelBtn" prefHeight="26.0" prefWidth="100.0" text="Cancel" />
 
-        <VBox.margin>
-         <Insets bottom="10.0" />
-        </VBox.margin>
-    </HBox>
+              <VBox.margin>
+               <Insets bottom="10.0" />
+              </VBox.margin>
+          </HBox>
 
-   <padding>
-      <Insets left="10.0" right="10.0" top="5.0" />
-   </padding>
-</VBox>
+         <padding>
+            <Insets left="10.0" right="10.0" top="5.0" />
+         </padding>
+      </VBox>
+   </children>
+</AnchorPane>
