--- a/src/main/resources/EditDataBaseModelDialog.fxml
+++ b/src/main/resources/EditDataBaseModelDialog.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="366.0" spacing="10" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
           <GridPane fx:id="grid" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="5" VBox.vgrow="ALWAYS">
             <padding>
                <Insets top="5.0" />
@@ -14,7 +14,6 @@
             <columnConstraints>
                <ColumnConstraints hgrow="NEVER" />
                <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints halignment="RIGHT" hgrow="NEVER" minWidth="-Infinity" />
             </columnConstraints>
             <rowConstraints>
                <RowConstraints />
