--- a/src/main/resources/DataBaseModelTableView.fxml
+++ b/src/main/resources/DataBaseModelTableView.fxml
@@ -8,14 +8,7 @@
    <VBox prefHeight="400.0" prefWidth="755.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <AnchorPane>
          <children>
-            <HBox prefHeight="25.0" prefWidth="531.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="205.0">
-               <children>
-                  <HBox fx:id="filterBox">
-                     <children>
-                        <ComboBox fx:id="filterMenu" prefWidth="100.0" />
-                     </children></HBox>
-                  <TextField fx:id="searchBar" prefHeight="25.0" prefWidth="372.0" HBox.hgrow="ALWAYS" />
-               </children>
+            <HBox fx:id="filterBox" prefHeight="25.0" prefWidth="531.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="205.0">
                <padding>
                   <Insets left="5.0" right="5.0" />
                </padding>
