--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -4,18 +4,6 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="246.0" prefWidth="937.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.dbproject.controllers.MainController">
-   <top>
-      <MenuBar>
-         <Menu text="File">
-            <MenuItem text="Open" />
-            <MenuItem text="Save" />
-            <MenuItem text="Exit" />
-         </Menu>
-         <Menu text="Help">
-            <MenuItem text="About" />
-         </Menu>
-      </MenuBar>
-   </top>
    <left>
       <VBox spacing="10" style="-fx-background-color: #e0e0e0; -fx-padding: 10;">
          <Button fx:id="btnItemDetails" text="Item Details" />
@@ -25,9 +13,34 @@
       </VBox>
    </left>
    <center>
-      <VBox alignment="BOTTOM_CENTER" spacing="20" style="-fx-padding: 20;">
+      <VBox alignment="CENTER" minHeight="-Infinity" spacing="20" style="-fx-padding: 20;">
          <Label text="Video Game History Foundation" textAlignment="CENTER" />
          <Label text="Management System" textAlignment="CENTER" />
+          <GridPane>
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="195.0" />
+                  <ColumnConstraints maxWidth="187.20000000000005" minWidth="132.20000000000005" prefWidth="187.20000000000005" />
+               <ColumnConstraints />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+              <Label text="Museum Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+              <ComboBox fx:id="comboxMuseumName" minWidth="100.0" GridPane.rowIndex="1" />
+
+              <Label text="Year:" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+              <ComboBox fx:id="comboxYear" minWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+              <Label text="Total DonationRevenue:" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+              <Label fx:id="labelDonationRevenue" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+
+              <Label text="Total amount of visitors:" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+              <Label fx:id="labelVisitorAmount" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+
+          </GridPane>
          <HBox alignment="BOTTOM_CENTER" prefWidth="527.0" spacing="20">
             <Button fx:id="btnVisitorDetails" text="Visitor Details" />
             <Button fx:id="btnManageGenres" prefHeight="26.0" prefWidth="111.0" text="Manage Genres" />
