--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="246.0" prefWidth="937.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.dbproject.controllers.MainController">
+<BorderPane prefHeight="420.0" prefWidth="816.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.dbproject.controllers.MainController">
    <left>
       <VBox spacing="10" style="-fx-background-color: #e0e0e0; -fx-padding: 10;">
          <Button fx:id="btnItemDetails" text="Item Details" />
@@ -13,42 +13,44 @@
       </VBox>
    </left>
    <center>
-      <VBox alignment="CENTER" minHeight="-Infinity" spacing="20" style="-fx-padding: 20;">
-         <Label text="Video Game History Foundation" textAlignment="CENTER" />
-         <Label text="Management System" textAlignment="CENTER" />
-          <GridPane>
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="195.0" />
-                  <ColumnConstraints maxWidth="187.20000000000005" minWidth="132.20000000000005" prefWidth="187.20000000000005" />
-               <ColumnConstraints />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-              <Label text="Museum Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-              <ComboBox fx:id="comboxMuseumName" minWidth="100.0" GridPane.rowIndex="1" />
-
-              <Label text="Year:" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-              <ComboBox fx:id="comboxYear" minWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-
-              <Label text="Total DonationRevenue:" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-              <Label fx:id="labelDonationRevenue" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-
-              <Label text="Total amount of visitors:" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-              <Label fx:id="labelVisitorAmount" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-
-          </GridPane>
-         <HBox alignment="BOTTOM_CENTER" prefWidth="527.0" spacing="20">
-            <Button fx:id="btnVisitorDetails" text="Visitor Details" />
-            <Button fx:id="btnManageGenres" prefHeight="26.0" prefWidth="111.0" text="Manage Genres" />
-            <Button fx:id="btnManagePlatforms" prefHeight="26.0" prefWidth="135.0" text="Manage Platforms" />
-            <Button fx:id="btnManagePublishers" prefHeight="26.0" prefWidth="119.0" text="Manage Publishers" />
-            <Button fx:id="btnManageItemType" prefHeight="26.0" prefWidth="119.0" text="Manage Item Types" />
-         </HBox>
-      </VBox>
+      <AnchorPane prefHeight="257.0" prefWidth="463.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" layoutX="298.0" text="Video Game History Foundation" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+            <Label alignment="CENTER" layoutX="327.0" layoutY="37.0" text="Management System" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+             <GridPane hgap="5.0" layoutY="74.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="100.0">
+                 <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="150.0" />
+                     <ColumnConstraints maxWidth="187.20000000000005" minWidth="132.20000000000005" prefWidth="200.0" />
+                  <ColumnConstraints prefWidth="200.0" />
+                 </columnConstraints>
+                 <rowConstraints>
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                 </rowConstraints>
+                 <Label text="Museum Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                 <ComboBox fx:id="comboxMuseumName" minWidth="100.0" prefWidth="150.0" GridPane.rowIndex="1" />
+   
+                    <Label text="Year:" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                 <ComboBox fx:id="comboxYear" minWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+   
+                    <Label text="Total DonationRevenue:" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                 <Label fx:id="labelDonationRevenue" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+   
+                    <Label text="Total amount of visitors:" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+                 <Label fx:id="labelVisitorAmount" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+   
+                </GridPane>
+            <HBox alignment="BOTTOM_CENTER" layoutY="184.0" prefWidth="527.0" spacing="20" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <Button fx:id="btnVisitorDetails" text="Visitor Details" />
+               <Button fx:id="btnManageGenres" prefHeight="26.0" prefWidth="111.0" text="Manage Genres" />
+               <Button fx:id="btnManagePlatforms" prefHeight="26.0" prefWidth="135.0" text="Manage Platforms" />
+               <Button fx:id="btnManagePublishers" prefHeight="26.0" prefWidth="119.0" text="Manage Publishers" />
+               <Button fx:id="btnManageItemType" prefHeight="26.0" prefWidth="119.0" text="Manage Item Types" />
+            </HBox>
+         </children>
+      </AnchorPane>
    </center>
 
 </BorderPane>
